--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -70,8 +70,8 @@ And while much of the course is concept-based and fairly high-level, it is still
 
 -   What is version control for code (and why do we want to use it?)
 -   Working locally with Git: Setting up our first Git repository ![](/figures/git-logo.png){fig-pos="H" width="10%"}
--   Remote code-hosting and GitHub: Sharing code on GitHub
--   Open-source code with the BCGov GitHub Organization ![](/figures/github-logo.png){fig-pos="H" width="10%"}
+-   Remote code-hosting and GitHub: Sharing code on GitHub ![](/figures/github-logo.png){fig-pos="H" width="10%"}
+-   Open-source code with the BCGov GitHub Organization
 
 ::: footer
 Course Materials: <https://bcgov.github.io/ds-intro-to-git>
@@ -105,23 +105,17 @@ During your account set up you will have created your PAT, and set up 2MFA which
 Question for Bonnie: do we want to check configuration at some point?
 :::
 
-## What are these tools?
+## Our Tools
 
-:::::: columns
-::: {.column width="40%"}
-![](/figures/git-logo.png){fig-pos="t" width="75%" fig-align="right"}
+::::: columns
+::: {.column width="50%"}
+![](/figures/git-logo.png){fig-pos="t" width="50%" fig-align="center"}
 :::
 
-::: {.column width="20%"}
-![](/figures/plus-sign.png){fig-pos="t" width="30%" fig-align="center"}
+::: {.column width="50%"}
+![](/figures/github-mark.png){fig-pos="t" width="25%" fig-align="center"}
 :::
-
-::: {.column width="40%"}
-![](/figures/github-mark.png){fig-pos="t" width="25%" fig-align="left"}
-:::
-::::::
-
-![](/figures/plus-sign.png){fig-pos="t" width="10%" fig-align="center"}
+:::::
 
 ![](/figures/bc-public-service.png){fig-pos="t" width="80%" fig-align="center"}
 
@@ -133,7 +127,7 @@ Git's integration with code hosting platforms like GitHub provides robust collab
 2014 Exchange Lab created bcgov GitHub organization (Bonnie to add what it is and what it does for us)
 :::
 
-## What is Version Control? {fig.align="center"}
+## What is Version Control? (Not This)
 
 ![](/figures/cartoon1.png){fig-pos="t" fig-align="center"}
 
@@ -156,7 +150,7 @@ We’ve all been in this situation before: it seems unnecessary to have multiple
 <br> <br> ![](/figures/sequential.png){fig-pos="H"}
 
 ::: notes
-Git keeps track of snapshots in time – each document or file starts with a base version and thenyou tell git to save just the changes you made at each step of the way.
+Git keeps track of snapshots in time – each document or file starts with a base version and then you tell git to save just the changes you made at each step of the way.
 
 You decide which changes make up the each snapshot, and git stores those changes and keeps useful metadata about them.
 
@@ -165,19 +159,28 @@ You can think of it as a recording of your progress: you can rewind to start at 
 Each snapshot is called a ‘commit’.
 :::
 
-## Branching {background-image="/figures/git-logo.png" background-size="10%" background-position="85% 6%"}
+## Collaborating: Branching {background-image="/figures/git-logo.png" background-size="10%" background-position="85% 6%"}
 
-<br> ![](/figures/branching.png){fig-pos="t" width="50%" fig-align="center"}
+::::: columns
+::: {.column width="50%"}
+![](/figures/branching.png){fig-pos="t" fig-align="center"}
+:::
+
+::: {.column width="50%"}
+-   Multiple users: different people work on their own copy
+-   Each can branch off the original work independently
+:::
+:::::
 
 ::: notes
-For example, two users can make independent sets of changes on the same document.
+In this example, two users can make independent sets of changes on the same document.
 
-Each can, on their own copy, head off on a different track and work on it independently while keeping the master copy intact.
+Each can, on their own copy, head off on a different track and work on it independently while keeping the main copy intact.
 
 When it's working....
 :::
 
-## Collaborating {background-image="/figures/git-logo.png" background-size="10%" background-position="85% 6%"}
+## Collaborating: Merging {background-image="/figures/git-logo.png" background-size="10%" background-position="85% 6%"}
 
 ::::: columns
 ::: {.column width="50%"}
@@ -277,6 +280,8 @@ In this folder you'll see several subfolders
 
 ::::: columns
 ::: {.column width="50%"}
+Basic Commands
+
 -   Repository (repo)
 -   Stage/Add
 -   Commit
@@ -285,6 +290,8 @@ In this folder you'll see several subfolders
 :::
 
 ::: {.column width="50%"}
+Intermediate Commands
+
 -   Clone
 -   Branch
 -   Fork
@@ -313,10 +320,9 @@ Fork Command: No direct Git command; done via hosting services like GitHub. Defi
 
 Let's create our first repository!
 
+## Review: Bash Jargon {background-image="/figures/git-logo.png" background-size="10%" background-position="85% 6%"}
 
-## Bash Jargon Review {background-image="/figures/git-logo.png" background-size="10%" background-position="85% 6%"}
-
-``` bash {eval=false}
+``` {.bash eval="false"}
 $ cd path/to/directory          # Go to specified directory - "quotes" are needed if there are spaces 
 $ cd ..                         # Go up one directory level
 $ mkdir new_directory           # Create specified directory
@@ -327,45 +333,47 @@ $ ls -a                         # List directories and files, including hidden
 ::: notes
 :::
 
-## Git Jargon Review {background-image="/figures/git-logo.png" background-size="10%" background-position="85% 6%"}
+## Review: Git Jargon {background-image="/figures/git-logo.png" background-size="10%" background-position="85% 6%"}
 
-``` bash {eval=false}
+``` {.bash eval="false"}
 #| class-output: output
-$ git init					        # initiate a repository in the current directory
-$ git status				        # indicate if there are any changes to files
-$ git add <filename>		    	# add a new file/change to the staging area
-$ git commit –m “commit message”	# commit all staged changes to the repository
-$ git log					        # view commit history
-$ git diff					        # show changes between commits
-$ git restore				        # restore file/s to previous commit
+$ git init                          # initiate a repository in the current directory
+$ git status                        # indicate if there are any changes to files
+$ git add <filename>                # add a new file/change to the staging area
+$ git commit –m “commit message”    # commit all staged changes to the repository
+$ git log                           # view commit history
+$ git diff                          # show changes between commits
+$ git restore                       # restore file/s to previous commit
 ```
 
-## Local Repository {background-image="/figures/git-logo.png" background-size="10%" background-position="85% 6%"}
+## Review: Local Repository {background-image="/figures/git-logo.png" background-size="10%" background-position="85% 6%"}
+
 ![](/figures/local-repository.png){fig-pos="t" fig-align="center"}
 
 ::: notes
-Repository is just “your” folder under version control
+Repository is just “your” folder under version control. At this point, they may not have heard of staging area (see section 2.5)
 :::
 
 ## GitHub
-:::::::: columns
+
+::::: columns
 ::: {.column width="50%"}
-![](/figures/github-mark.png){fig-pos="t" fig-align="center" width=250%}
+![](/figures/github-mark.png){fig-pos="t" fig-align="center" width="250%"}
 :::
 
 ::: {.column width="50%"}
-- Hosting service for git repositories
-- Greatly facilitates collaboration
 
-Git: Version Control +
-Hub: Centralized repos & 
-networking/collaborating
+-   Hosting service for git repositories
+-   Greatly facilitates collaboration
+
+**Git:** Version Control **+**
+
+**Hub:** Centralized repos & networking/collaborating
 :::
-::::::::
+:::::
 
 ::: notes
-GitHub is a platform that hosts Git repositories in the web and provides a web interface to interact with repos.
-Main Function is to host the ‘remote’ or main copy of a git repository (project)
+GitHub is a platform that hosts Git repositories in the web and provides a web interface to interact with repos. Main Function is to host the ‘remote’ or main copy of a git repository (project)
 :::
 
 # 
@@ -376,114 +384,170 @@ Main Function is to host the ‘remote’ or main copy of a git repository (proj
 Version control really comes into its own when we begin to collaborate with other people. We already have most of the machinery we need to do this; the only thing missing is to copy changes from one repository to another.
 :::
 
-## Remote Repository  {background-image="/figures/github-mark.png" background-size="10%" background-position="85% 6%"}
+## Remote Repository {background-image="/figures/github-mark.png" background-size="8%" background-position="85% 6%"}
 
-Bonnie to add image for remote repo
+![](/figures/remote-repository-final.png){fig-pos="t" fig-align="center"}
 
 ::: notes
 Think of the remote as the “authoritative” version/source/copy
 :::
 
-## 
+##  {background-image="/figures/github-mark.png" background-size="8%" background-position="85% 6%"}
 
-:::::::: columns
-::: {.column width="50%"}
-![](/figures/github-mark.png){fig-pos="t" fig-align="center"}
-:::
-
-::: {.column width="50%"}
-Create your first remote repository! 
-:::
-::::::::
+Let's create our first remote repository!
 
 ::: notes
-Let’s make our first repository
+Let’s make our first repository 
 :::
 
 ## A Collaborative Workflow {background-image="/figures/github-mark.png" background-size="10%" background-position="85% 6%"}
 
-:::::::: columns
-::: {.column width="33%"}
-::: {.fragment fragment-index=1}
+::::::::::::: columns
+::::: {.column width="33%"}
+::: {.fragment fragment-index="1"}
 Original Repository
 
-|── planets
+\|── planets
 
-  | |──.git
+\| \|──.git
 
-  | |── mars.txt
-
+\| \|── mars.txt
 :::
-::: {.fragment fragment-index=7}
 
-  | |── pluto.txt
+::: {.fragment fragment-index="7"}
+\| \|── pluto.txt
 :::
-:::
-::: {.column width="33%"}
-::: {.fragment fragment-index=2}
+:::::
+
+:::::: {.column width="33%"}
+::: {.fragment fragment-index="2"}
 GitHub Repository
 
-|── planets
+\|── planets
 
-  | |── .git
-:::
-::: {.fragment fragment-index=3}
-
-  | |── mars.txt
-:::
-::: {.fragment fragment-index=6}
-
-  | |── pluto.txt
+\| \|── .git
 :::
 
+::: {.fragment fragment-index="3"}
+\| \|── mars.txt
 :::
-::: {.column width="33%"}
-::: {.fragment fragment-index=4}
+
+::: {.fragment fragment-index="6"}
+\| \|── pluto.txt
+:::
+::::::
+
+::::: {.column width="33%"}
+::: {.fragment fragment-index="4"}
 Cloned Repository
 
-|── planets
+\|── planets
 
-  | |── .git
+\| \|── .git
 
-  | |── mars.txt
+\| \|── mars.txt
+:::
 
+::: {.fragment fragment-index="5"}
+\| \|── pluto.txt
 :::
-::: {.fragment fragment-index=5}
+:::::
+:::::::::::::
 
-  | |── pluto.txt
-:::
-:::
-::::::::
+<br> <br> <br>
 
-<br>
-<br>
-<br>
+:::::::::::: columns
+::::::: {.column width="50%"}
+::: {.fragment fragment-index="1"}
+1.  Initial repository set up
+:::
 
-:::::::: columns
-::: {.column width="50%"}
-::: {.fragment fragment-index=1}
-1. Initial repository set up
+::: {.fragment fragment-index="2"}
+2.  Remote repository created & linked
 :::
-::: {.fragment fragment-index=2}
-2. Remote repository created & linked 
+
+::: {.fragment fragment-index="3"}
+3.  Local changes pushed to remote
 :::
-::: {.fragment fragment-index=3}
-3. Local changes pushed to remote
-:::
-::: {.fragment fragment-index=4}
+
+::: {.fragment fragment-index="4"}
 4.  Remote repository cloned by collaborator
 :::
+:::::::
+
+:::::: {.column width="50%"}
+::: {.fragment fragment-index="5"}
+5.  Collaborator makes additions
 :::
 
-::: {.column width="50%"}
-::: {.fragment fragment-index=5}
-5. Collaborator makes additions
+::: {.fragment fragment-index="6"}
+6.  Collaborator updates remote with changes
 :::
-::: {.fragment fragment-index=6}
-6. Collaborator updates remote with changes
+
+::: {.fragment fragment-index="7"}
+7.  Collaborator changes pulled back to original
 :::
-::: {.fragment fragment-index=7}
-7. Collaborator changes pulled back to original
+::::::
+::::::::::::
+
+## A Typical Workflow
+
+The table below doubles as a handy cheatsheet; take a screenshot and save for future reference!
+
+::: {style="font-size: 1em;"}
+| Order         | Action         | Git Command                                   |
+|------------------|------------------|------------------------------------|
+| 1 (Once Only) | Create remote  | (Done on GitHub)                              |
+| 2 (Once Only) | Clone remote   | `git clone https://github.com/path/to/remote` |
+| 3             | Update local   | `git pull origin main`                        |
+| 4             | Make changes   | (Done in editor)                              |
+| 5             | Stage changes  | `git add numbers.txt`                         |
+| 6             | Commit changes | `git commit -m "Add 100 to numbers.txt"`      |
+| 7             | Update remote  | `git push origin main`                        |
 :::
+
+::: notes
+To this point, we have learned a lot of different git commands and workflows involved in tracking all of our changes, keeping our repositories up-to-date, and collaborating across computers using GitHub. While there are multiple levels of nuance that go into each of these steps, let's lay out a typical workflow.
 :::
+
+## What about our data? (Ignoring things)
+
+::::::::::: columns
+:::::::: {.column width="50%"}
+::: {.fragment fragment-index="1"}
+Original Repository
+
+\|── planets
+
+\| \|──.git
+
+\| \|── mars.txt
+
+\| \|── pluto.txt
+:::
+
+:::: {.fragment .fade-up fragment-index="3"}
+::: {.fragment .highlight-current-blue fragment-index="3"}
+\| \|── data.csv
+:::
+::::
+
+:::: {.fragment .fade-up fragment-index="4"}
+::: {.fragment .highlight-current-blue fragment-index="4"}
+\| \|── .gitignore
+:::
+::::
 ::::::::
+
+:::: {.column width="50%"}
+::: {.fragment .fade-left fragment-index="2"}
+![](/figures/data.png){fig-pos="t" fig-align="center" width="75%"}
+:::
+::::
+:::::::::::
+
+::: notes
+Ignore data files! .gitignore
+
+What if we have files that we do not want Git to track for us, like backup files created by our editor or intermediate files created during data analysis? This often is the case in BC Government data projects.
+:::
